# nshtrainer

./: AGENTS.md  CLAUDE.md  LICENSE.md  README.md  pyproject.toml
.claude/skills/init-skill/: SKILL.md
.claude/skills/using-nshtrainer/: SKILL.md
.claude/skills/using-nshtrainer/references/: checkpointing.md  configuration.md  loggers.md  model.md
docs/: callbacks.md  configuration.md  distributed.md  getting-started.md  model.md  nn.md  optimizers-schedulers.md
scripts/: publish.sh
src/nshtrainer/: __init__.py  _directory.py  _hf_hub.py  _run.py  cli.py  config.py  log.py  optimizer.py  profilers.py  runner.py  snapshot.py
src/nshtrainer/_checkpoint/: loader.py  metadata.py  saver.py
src/nshtrainer/_skill/: SKILL.md
src/nshtrainer/_skill/references/: callbacks.md  checkpointing.md  configuration.md  distributed.md  getting-started.md  loggers.md  model.md  nn.md  optimizers-schedulers.md
src/nshtrainer/callbacks/: __init__.py  actsave.py  base.py  debug_flag.py  directory_setup.py  distributed_prediction_writer.py  early_stopping.py  ema.py  finite_checks.py  gradient_skipping.py  latest_epoch_checkpoint.py  log_epoch.py  norm_logging.py  on_exception_checkpoint.py  print_table.py  rlp_sanity_checks.py  shared_parameters.py  timer.py  wandb_upload_code.py  wandb_watch.py
src/nshtrainer/config/: __init__.py
src/nshtrainer/configs/: __init__.py
src/nshtrainer/data/: datamodule.py
src/nshtrainer/ll/: __init__.py
src/nshtrainer/loggers/: _base.py  actsave.py  csv.py  tensorboard.py  wandb.py
src/nshtrainer/lr_scheduler/: linear_warmup_cosine.py  reduce_lr_on_plateau.py
src/nshtrainer/metrics/: _config.py
src/nshtrainer/model/: __init__.py  _environment.py  base.py  config.py
src/nshtrainer/nn/: mlp.py  nonlinearity.py
src/nshtrainer/trainer/: _checkpoint_metadata.py  _config.py  _runtime_callback.py  checkpoint_connector.py  config.py  trainer.py
src/nshtrainer/util/: _environment_info.py  type_asserts.py
tests/: _distributed_predict_helper.py  test_distributed_prediction_writer.py
tests/_checkpoint/: test_saver.py
tests/callbacks/checkpoint/: test_checkpoint_simple.py
tests/trainer/: test_trainer.py
tests/util/: test_path.py
(+57 files in other folders)
