[tool.poetry]
name = "nshtrainer"
version = "0.1.0"
description = ""
authors = ["Nima Shoghi <nimashoghi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nshrunner = "^0.4.1"
nshconfig = "^0.2.0"
torch = "*"
typing-extensions = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
