[project]
name = "nshtrainer"
version = "1.5.1"
description = ""
authors = [{ name = "Nima Shoghi", email = "nimashoghi@gmail.com" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"

dependencies = [
    "nshconfig>=0.43",
    "psutil",
    "numpy",
    "torch",
    "typing-extensions",
    "packaging",
    "lightning",
    "torchmetrics",
    "nshskill>=0.1.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright",
    "ruff",
    "ipykernel",
    "ipywidgets",
    "pytest",
    "pytest-cov",
    "pytest-forked",
]

[project.optional-dependencies]
extra = [
    "nshrunner",
    "wrapt",
    "GitPython",
    "wandb",
    "tensorboard",
    "huggingface-hub",
    "nshutils",
]

[tool.basedpyright]
typeCheckingMode = "standard"
deprecateTypingAliases = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportPrivateImportUsage = "none"
reportMatchNotExhaustive = "warning"
reportOverlappingOverload = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportImplicitOverride = "warning"
reportIncompatibleMethodOverride = "information"

[tool.ruff.lint]
select = ["FA102", "FA100"]
ignore = ["F722", "F821", "E731", "E741"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.pytest.ini_options]
minversion = "6.0"
# addopts = "--cov=src/nshtrainer --cov-report=term-missing --cov-report=xml --"
addopts = [
    "--import-mode=importlib",
    "--cov=src/nshtrainer",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
